# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md
2024/: CMakeLists.txt  main.cpp  range_helper.hpp  registry.cpp  registry.hpp  util.cpp  util.hpp
2024/solutions/: day1.cpp  day1.hpp  day10.cpp  day11.cpp  day12.cpp  day1_1.cpp  day1_1.hpp  day2.cpp  day2.hpp  day3.cpp  day3.hpp  day4.cpp  day4.hpp  day5.cpp  day5.hpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  dayX.cpp
